tests/paczka2/big_fuzzy/48518852.err
Error in line 3: S125 A284 93,38
Error in line 10: hUXmOyB8My S323 314,78
Error in line 2: N8J S125 93,8
Error in line 13: i8wDDVxH S907 87,2
Error in line 15: STx1ckyo S907 31,0
Error in line 25: S125 A284 144,17
Error in line 26: S125 S907 8,3
Error in line 9: 4pfaGVFT5oD S907 20,3
Error in line 32: N8J S907 3,84
Error in line 37: N8J S125 98,2
Error in line 31: 4pfaGVFT5oD A284 30,2
Error in line 45: hUXmOyB8My S907 83,3
Error in line 51: N8J A284 93,4
Error in line 64: N8J S323 23,0
Error in line 69: N8J A284 84,8
Error in line 78: S125 S323 53,6
Error in line 86: i8wDDVxH S125 75,2
Error in line 92: hUXmOyB8My S323 95,6
Error in line 93: hUXmOyB8My S125 40,4
Error in line 102: STx1ckyo S907 59,0
Error in line 101: i8wDDVxH A284 68,4
Error in line 104: hUXmOyB8My S323 61,2
Error in line 95: 4pfaGVFT5oD S323 83,5
Error in line 119: STx1ckyo S323 0,0
Error in line 136: cvM S907 314,4
Error in line 124: STx1ckyo S907 44,6
Error in line 158: 4pfaGVFT5oD S323 76,5
Error in line 171: STx1ckyo S125 56,9
Error in line 173: 4pfaGVFT5oD S907 23,1
Error in line 185: hUXmOyB8My S907 2,5
Error in line 195: hUXmOyB8My S323 31,4
Error in line 204: cvM A284 83,4
Error in line 217: i8wDDVxH A284 35,1
Error in line 214: N8J A284 40,1
Error in line 219: N8J S323 73,8
Error in line 235: cvM A284 74,3
Error in line 232: N8J S125 11,5
Error in line 237: cvM S125 24,8
